# traktor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SpindlersNotitzen.txt
benchmark/: .gitignore  CMakeLists.txt  RASPI_4_vs_5.txt  build.sh  compiler_explorer_code.cpp  get-mca.sh  llvm-mca_notizen.txt  mca.sh  run-llvm-mca.sh  runGCCandClang.sh  sort_bench_result.txt
benchmark/bench_baseline_java2/test/: compareJDKs.txt  kommandos.txt  pom.xml
benchmark/bench_baseline_java2/test/src/main/java/bumsti/: BaselineFloatMul.java  BaselineSimple.java  BaselineSimpleImpl.java  BaselineSimpleOptionalImpl.java  CalcSettings.java  CoordPoint.java  IBaselineCalc.java  IBaselineCalcOptional.java
benchmark/bench_baseline_java2/test/src/main/java/org/sample/: Bm.java
benchmark/cmp/: gcc.txt
benchmark/simple_baseline/: 30_mca.sh  CMakeLists.txt  cs.sh
benchmark/simple_baseline/src/: calc.cpp  calc.h  calc_one.cpp  main.cpp  v1_simple.cpp  v2_float_mul.cpp  v3_short_int.cpp
benchmark/src/: bench.cpp
benchmark/src/calc_baseline/: calc_baseline.cpp  calc_baseline.h  calc_baseline_float_mul.cpp  calc_baseline_highway.cc  calc_baseline_int.cpp  calc_baseline_only_float.cpp  calc_baseline_short_int.cpp  calc_baseline_simple.cpp  calc_baseline_simple_full_loop.cpp  calc_baseline_v16.cpp  calc_baseline_without_float.cpp  highway.cc  highway_fp16.cc  highway_playground.cc  highway_submod.cc  test_highway.cpp
benchmark/src/calc_classic/: calc_classic.cpp  calc_classic.h
detect/: Soja 01  Soja gross  Soja kl  default  lastSettings.json  soja1
frontend/: .npmrc  README.md  package-lock.json  package.json  quasar.config.ts
frontend/src/boot/: axios.ts
frontend/src/components/: SettingsComponent.vue  models.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: IndexPage.vue
frontend/src/stores/: index.ts  settings-store.ts
misc/: README_PORT_80.txt  RaspiSetupForTraktor.txt  traktor.service
static/: index.html
static/assets/: ErrorNotFound.19e7a925.js  IndexPage.a9f747cb.js  MainLayout.dff5dd3c.js  QBtn.935bbfa2.js  index.3698f784.js  render.75c53259.js
static/scripts/: tractor.js
test/: CMakeLists.txt  traktor_test.cpp
traktor/: .gitignore  CMakeLists.txt
traktor/src/: calculate.cpp  calculate.h  calculate_short_int.cpp  calculate_short_int.h  camera.h  detect.h  detect_settings.cpp  encode.h  harrow.cpp  main.cpp  pipeline_1_camera.cpp  pipeline_2_detect.cpp  pipeline_3_encode_send.cpp  shared.h  stats.cpp  stats.h  thread_stats.cpp  webserver.cpp
traktor/src/pipeline/: ImagePipeline.cpp  ImagePipeline.hpp
